--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Pokedex</h1>
     <ul class="poke-list"></ul>
+    <script src="js/promise-pollyfill.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
