--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Simple JS App</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css"/>
+    <title>Simple JS App</title>
   </head>
   <body>
     <h1>Pokedex</h1>
     <ul class="poke-list"></ul>
-    <script src="js/promise-pollyfill.js"></script>
+    <script src="js/promise-polyfill.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
