Added modal to css html and js
Added button and div to html for modal
added modal attributes to css for closing opening  and visibility
added modal container to js to show modal and recognize escape/click to exit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <h1>Pokedex</h1>
+    <button id="show-modal">View Pokedex!</button>
+    <div id="modal-container">
+    </div>
     <ul class="poke-list"></ul>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/scripts.js"></script>
