--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css"/>
     <title>Simple JS App</title>
   </head>
-  
+
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
       <a class="navbar-brand" href="#">Pokedex</a>
@@ -25,7 +25,7 @@
 
     <br>
 
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="showModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -33,12 +33,6 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
-          </div>
-          <div class="modal-body">
-            ...
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal" class="btn btn-primary">Save</button>
           </div>
         </div>
       </div>
