--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
           </li>
         </ul>
       </div>
@@ -30,7 +30,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-header" id="exampleModalLabel">Modal Title</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <button class="btn btn-primary btn-lg" type="button" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
