--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <ul class="pokemon-list list-unstyled flex-row flex-wrap w-100 just-content: center" data-toggle="modal" data-target="#pokemonModal"></ul>
+            <ul class="pokemon-list list-unstyled flex-row flex-wrap w-100 just-content: center"></ul>
+            <li class="list-group-item"></li>
           </div>
         </div>
         <div id="page-container">
