--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="col-12 modal-title " id="exampleModalLabel"></h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">x</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" aria-label="Close">x</button>
           </div>
           <div class="modal-body">...</div>
         </div>
