Updated index.html styles.css and minicss
Removed error in index.html
removed unnecessary css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <ul class="pokemon-list list-group class="list-group" flex-row flex-wrap w-100 just-content: center"></ul>
+            <ul class="pokemon-list flex-row flex-wrap w-100 just-content: center"></ul>
           </div>
         </div>
         <div id="page-container">
