--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <ul class="row pokemon-list mt-9 pl-6"></ul>
+          <ul class="list-group row pokemon-list mt-9 pl-6"></ul>
         </div>
       </div>
       <div id="page-container">
